# thstat

./: .env  .gitignore  Cargo.toml  rustfmt.toml  sqlx-data.json
migrations/: 20230602082700_init_db.down.sql  20230602082700_init_db.up.sql  20230727231210_add_practice_tracking.down.sql  20230727231210_add_practice_tracking.up.sql  20230731034202_add_game_id.down.sql  20230731034202_add_game_id.up.sql
src/: db.rs  decompress.rs  main.rs  th07.rs  types.rs
src/db/: row_types.rs
src/th07/: replay.rs  score.rs  spellcard_names.rs  spellcards.rs
src/types/: any.rs  shot_type.rs  spell_card.rs
touhou/: Cargo.toml
touhou-macros/: Cargo.toml
touhou-macros/src/: define_game.rs  define_locations.rs  define_memory.rs  lib.rs  numeric_enum.rs  spell_cards.rs  util.rs
touhou-macros/src/define_locations/: ast.rs  types.rs
touhou-macros/src/spell_cards/: entry.rs  flat_entry.rs  grouped_entry.rs  spell_data.rs
touhou-macros/src/spell_cards/entry/: extra_stage.rs  main_stage.rs  stage_set.rs
touhou-process/: Cargo.toml
touhou-process/src/: data_member.rs  lib.rs  windows.rs
touhou-score-watch/: Cargo.toml
touhou-score-watch/src/: main.rs
touhou-watch/: Cargo.toml  tauri.conf.json
touhou-watch-v2/: Cargo.toml  tauri.conf.json
touhou-watch-v2/src/: event_serialize.rs  main.rs  run_track.rs  set_track.rs  th07.rs  th08.rs  th10.rs  time.rs  watcher.rs
touhou-watch-v2/src/run_track/: data.rs  tracker.rs
touhou-watch-v2/src/run_track/tracker/: builder.rs  run.rs  update.rs
touhou-watch-v2/src/set_track/: data.rs  key.rs  metrics.rs  tracking.rs
touhou-watch-v2/src/time/: serde_conv.rs
touhou-watch-v2/ui/: index.html
touhou-watch-v2/ui/css/: main.css
touhou-watch-v2/ui/js/modules/: location_selector.js  main.js  set_display.js  status_display.js  utils.js
touhou-watch-v2/ui/js/modules/game_data/: game_time.js  named_value.js  practice_set.js
touhou-watch/src/: location.rs  main.rs  memory.rs  persist.rs  run.rs
touhou-watch/src/memory/: process.rs  state.rs
touhou-watch/ui/: index.html
touhou-watch/ui/css/: watch.css
touhou-watch/ui/js/: watch.js
touhou-watch/ui/js/modules/: game.js  game_display.js  log_display.js  main.js  metrics.js  session.js  utils.js
touhou-watch/ui/js/modules/display/: display.js  game_display.js  game_list.js
touhou-watch/ui/js/modules/game_data/: difficulty.js  game_event.js  locations.js  shot_type.js  spell_card.js  stage.js
touhou/src/: crypt.rs  db.rs  decompress.rs  lib.rs  main.rs  memory.rs  score.rs  score_file.rs  th07.rs  th08.rs  th10.rs  th15.rs  th18.rs  tracking.rs  types.rs
touhou/src/db/: row_types.rs
touhou/src/memory/: traits.rs  types.rs
touhou/src/memory/types/: error.rs  location.rs  state.rs
touhou/src/score/: crypt.rs  decompress.rs
touhou/src/th07/: memory.rs  replay.rs  score.rs  spellcards.rs
touhou/src/th07/memory/: location.rs  process.rs  state.rs  tracking.rs
touhou/src/th08/: memory.rs  score.rs  spellcards.rs
touhou/src/th08/memory/: location.rs  process.rs  state.rs
touhou/src/th10/: memory.rs  spellcards.rs
touhou/src/th10/memory/: location.rs  process.rs  state.rs  tracking.rs
touhou/src/th15/: spellcards.rs
touhou/src/th15/memory/: process.rs
touhou/src/th18/: score.rs  spellcards.rs
touhou/src/tracking/: builder.rs  driver.rs  state.rs  time.rs  tracker.rs  update.rs
touhou/src/types/: any.rs  difficulty.rs  errors.rs  game_id.rs  score.rs  shot_power.rs  shot_type.rs  spell_card.rs  stage.rs
