[package]
name = "touhou-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.21", features = ["local-offset"] }
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "time" ] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
byteorder = "1.4.3"
serde = { version = "1.0.163", features = ["derive"] }
