[package]
name = "touhou-process"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
bytemuck = { version = "1.14", features = ["min_const_generics", "derive"] }

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
