[package]
name = "touhou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
touhou-macros = { path = "../touhou-macros" }
time = { version = "0.3.21", features = ["local-offset", "serde-human-readable"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
byteorder = { version = "1.4.3", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.44"
sysinfo = { version = "0.29.7", optional = true }
process-memory = { version = "0.5", optional = true }

[features]
default = ["th07", "th08", "th10", "th15"]
find-process = ["dep:sysinfo"]
memory = ["find-process", "dep:process-memory"]
score-file = ["dep:byteorder"]
th07 = []
th08 = []
th10 = []
th15 = []